# nycuaa-membercard-be

./: .env  .env.example  .gitignore  README.md  invoice.py  pyproject.toml  sendupdateemail.py  server.py  test.pkpass  test.py  update.py  updatepass.html
email_template/: output.html  updatepass.html
passes/A120859215/: manifest.json  pass.json  signature
passes/A121189481/: manifest.json  pass.json  signature
passes/A122116544/: manifest.json  pass.json  signature
passes/A122412756/: manifest.json  pass.json  signature
passes/A123376286/: manifest.json  pass.json  signature
passes/A124115527/: manifest.json  pass.json  signature
passes/A125221275/: manifest.json  pass.json  signature
passes/A125384535/: manifest.json  pass.json  signature
passes/A125849380/: manifest.json  pass.json  signature
passes/A125956782/: manifest.json  pass.json  signature
passes/A126010187/: manifest.json  pass.json
passes/A126671573/: manifest.json  pass.json  signature
passes/A126898976/: manifest.json  pass.json  signature
passes/A127057933/: manifest.json  pass.json  signature
passes/A127388200/: manifest.json  pass.json  signature
passes/A127551338/: manifest.json  pass.json  signature
passes/A128941890/: manifest.json  pass.json  signature
passes/A129306699/: manifest.json  pass.json  signature
passes/A129895502/: manifest.json  pass.json  signature
scripts/: add_admin.py  connect2server.sh  dev.py  init_server.py  install  serve  serve.sh  update.py
src/: api.py  db.py  pkpass.py  server.py  util.py
template/: pass.json  signature
(+455 files in other folders)
